<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ottogroup.bi</groupId>
	<artifactId>soda</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<akka.version>2.3.6</akka.version>
		<scala.version>2.10</scala.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<profiles>
		<profile>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<id>cloudera</id>
			<properties>
				<hadoop.version>2.5.0-cdh5.3.1</hadoop.version>
				<hive.version>0.13.1-cdh5.3.1</hive.version>
				<oozie.version>4.0.0-cdh5.3.1</oozie.version>
			</properties>
		</profile>
		<profile>
			<id>hortonworks</id>
			<properties>
				<hadoop.version>2.4.0.2.1.3.0-563</hadoop.version>
				<hive.version>0.13.0.2.1.3.0-563</hive.version>
				<oozie.version>4.0.0.2.1.3.0-563</oozie.version>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>hortonworks</id>
			<url>http://repo.hortonworks.com/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>hortonworks-jetty</id>
			<url>http://repo.hortonworks.com/content/repositories/jetty-hadoop/</url>
		</repository>
		<repository>
			<id>cloudera</id>
			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
		</repository>
		<repository>
			<id>conjars</id>
			<url>http://conjars.org/repo</url>
		</repository>
		<repository>
			<id>gbi-releases</id>
			<url>https://nexus.scm.otto.de/content/repositories/gbi-releases/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>ascii-table</groupId>
			<artifactId>ascii-table</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.scopt</groupId>
			<artifactId>scopt_2.10</artifactId>
			<version>3.3.0</version>
		</dependency>
		<dependency>
			<groupId>io.spray</groupId>
			<artifactId>spray-client</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>io.spray</groupId>
			<artifactId>spray-json_2.10</artifactId>
			<version>1.2.6</version>
		</dependency>
		<dependency>
			<groupId>io.spray</groupId>
			<artifactId>spray-routing</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.openpojo</groupId>
			<artifactId>openpojo</artifactId>
			<version>0.6.2</version>
		</dependency>
		<dependency>
			<groupId>net.lingala.zip4j</groupId>
			<artifactId>zip4j</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>jooq</artifactId>
			<version>3.5.0</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.akka</groupId>
			<artifactId>akka-contrib_${scala.version}</artifactId>
			<version>${akka.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.akka</groupId>
			<artifactId>akka-slf4j_${scala.version}</artifactId>
			<version>${akka.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.akka</groupId>
			<artifactId>akka-actor_${scala.version}</artifactId>
			<version>${akka.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hive</groupId>
			<artifactId>hive-jdbc</artifactId>
			<version>${hive.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-client</artifactId>
			<version>${hadoop.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.oozie</groupId>
			<artifactId>oozie-client</artifactId>
			<version>${oozie.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ottogroup.bi</groupId>
			<artifactId>hadoop-launcher</artifactId>
			<version>0.0.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<artifactId>jersey-server</artifactId>
			<groupId>com.sun.jersey</groupId>
			<version>1.9</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.ottogroup.bi</groupId>
			<artifactId>minioozie</artifactId>
			<version>0.0.6</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<artifactId>jersey-server</artifactId>
					<groupId>com.sun.jersey</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.scalatest</groupId>
			<artifactId>scalatest_${scala.version}</artifactId>
			<version>2.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.9.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>jline</groupId>
			<artifactId>jline</artifactId>
			<version>2.12.1</version>
		</dependency>
		<dependency>
			<groupId>com.ottogroup.bi.eci</groupId>
			<artifactId>
				com.ottogroup.bi.eci.transformations
			</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src/main/scala</sourceDirectory>
		<testSourceDirectory>src/test/scala</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<!-- see http://davidb.github.com/scala-maven-plugin -->
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<args>
								<arg>-make:transitive</arg>
								<arg>-dependencyfile</arg>
								<arg>${project.build.directory}/.scala_dependencies</arg>
							</args>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.scalatest</groupId>
				<artifactId>scalatest-maven-plugin</artifactId>
				<version>1.0</version>
				<configuration>
					<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
					<junitxml>.</junitxml>
					<filereports>WDF TestSuite.txt</filereports>
					<argLine>-Xmx1024m -XX:MaxPermSize=512M</argLine>
					<environmentVariables>
						<HADOOP_HOME>${project.build.directory}/hadoop</HADOOP_HOME>
					</environmentVariables>
				</configuration>
				<executions>
					<execution>
						<id>test</id>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>gbi-releases</id>
			<url>https://nexus.scm.otto.de/content/repositories/gbi-releases/</url>
		</repository>
		<snapshotRepository>
			<id>gbi-snapshots</id>
			<name>Ecbi-Snapshot-Releases</name>
			<url>https://nexus.scm.otto.de/content/repositories/gbi-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
</project>
